--- a/assets/css/helper-class.css
+++ b/assets/css/helper-class.css
@@ -82,7 +82,7 @@ and open the template in the editor.
     margin-top: 20px;
 }
 .m-b-20{
-    margin-bottom: 20px;
+    margin-bottom: 20px !important;
 }
 .m-l-20{
     margin-left: 20px;
@@ -299,10 +299,10 @@ a.link-normal:hover{
     padding: 5px 5px 0 5px;
 }
 .panel.with-nav-tabs .nav-tabs{
-	border-bottom: none;
+    border-bottom: none;
 }
 .panel.with-nav-tabs .nav-justified{
-	margin-bottom: -1px;
+    margin-bottom: -1px;
 }
 .with-nav-tabs.panel-primary .nav-tabs > li > a,
 .with-nav-tabs.panel-primary .nav-tabs > li > a:hover,
@@ -314,17 +314,17 @@ a.link-normal:hover{
 .with-nav-tabs.panel-primary .nav-tabs > .open > a:focus,
 .with-nav-tabs.panel-primary .nav-tabs > li > a:hover,
 .with-nav-tabs.panel-primary .nav-tabs > li > a:focus {
-	color: #fff;
-	background-color: #3071a9;
-	border-color: transparent;
+    color: #fff;
+    background-color: #3071a9;
+    border-color: transparent;
 }
 .with-nav-tabs.panel-primary .nav-tabs > li.active > a,
 .with-nav-tabs.panel-primary .nav-tabs > li.active > a:hover,
 .with-nav-tabs.panel-primary .nav-tabs > li.active > a:focus {
-	color: #428bca;
-	background-color: #fff;
-	border-color: #428bca;
-	border-bottom-color: transparent;
+    color: #428bca;
+    background-color: #fff;
+    border-color: #428bca;
+    border-bottom-color: transparent;
 }
 .with-nav-tabs.panel-primary .nav-tabs > li.dropdown .dropdown-menu {
     background-color: #428bca;
@@ -341,4 +341,8 @@ a.link-normal:hover{
 .with-nav-tabs.panel-primary .nav-tabs > li.dropdown .dropdown-menu > .active > a:hover,
 .with-nav-tabs.panel-primary .nav-tabs > li.dropdown .dropdown-menu > .active > a:focus {
     background-color: #4a9fe9;
+}
+.content-center{
+    display: block;
+    margin: 0 auto;
 }
