--- a/assets/css/helper-class.css
+++ b/assets/css/helper-class.css
@@ -8,6 +8,13 @@ and open the template in the editor.
     Author     : johnv
 */
 
+.widget{    
+    box-shadow: #333 0px 0px 1px;
+    box-shadow: #333 0px 0px 1px;
+    border-radius: 5px;
+    padding: 15px;
+}
+
 /*BEGIN:: HELPER CLASS*/
 /*MARGIN*/
 .m-all-0{
@@ -345,4 +352,10 @@ a.link-normal:hover{
 .content-center{
     display: block;
     margin: 0 auto;
+}
+.bg-gray{
+    background-color: #f5f5f5 !important;
+}
+.bg-white{
+    background-color: #FFF !important;
 }
