--- a/assets/css/helper-class.css
+++ b/assets/css/helper-class.css
@@ -365,8 +365,11 @@ a.link-normal:hover{
 }
 
 .bg-gray{
-    background-color: #f5f5f5 !important;
+    background-color: #fbfbfb !important;
 }
 .bg-white{
     background-color: #FFF !important;
+}
+.with-300{
+    max-width: 300px;
 }
