--- a/assets/css/stylePrincipal.css
+++ b/assets/css/stylePrincipal.css
@@ -894,8 +894,8 @@ table td{
     display: block;
     padding: 15px 0px;
     padding-left: 15px;
-    border-top: 1px dashed #ccc;
-    -webkit-border-start-width: 10px;
+    border: 1px dashed #ccc;    
+    border-left: 0px;
 }
 .item-control .icon-control{
     width: 23px;
