--- a/assets/css/stylegridView.css
+++ b/assets/css/stylegridView.css
@@ -76,4 +76,29 @@ td .point{
 }
 .item-grid{
     cursor: pointer;
+    position: relative;
+}
+.point{
+    position: absolute;
+    top: 0px;    
+    left: 0px;
+    right: 0px;
+    height: 100%;
+    background: #ffffff69;
+}
+.point .title{
+    padding: 5px;    
+    max-width: 130px;    
+    word-wrap: break-word;    
+    font-size:13px;     
+    /* Fallback for non-webkit */
+    display: -webkit-box;    
+    height: 54.6px;
+    /* Fallback for non-webkit */
+    margin: 0 auto;  
+    line-height: 1.4;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
