--- a/assets/css/stylegridView.css
+++ b/assets/css/stylegridView.css
@@ -28,7 +28,7 @@ table .item-blue{
     background: blue;
 }
 table .item-green{
-    background: greenyellow;
+    background: #00ff00;
 }
 table .item-left-vertical{
     border-top-color: #fff;
