--- a/assets/css/helper-class.css
+++ b/assets/css/helper-class.css
@@ -60,6 +60,9 @@ and open the template in the editor.
 .m-t-10{
     margin-top: 10px;
 }
+.m-b-1{
+    margin-bottom: 1px;
+}
 .m-b-10{
     margin-bottom: 10px;
 }
@@ -304,10 +307,10 @@ a.link-normal:hover{
     padding: 5px 5px 0 5px;
 }
 .panel.with-nav-tabs .nav-tabs{
-	border-bottom: none;
+    border-bottom: none;
 }
 .panel.with-nav-tabs .nav-justified{
-	margin-bottom: -1px;
+    margin-bottom: -1px;
 }
 .with-nav-tabs.panel-primary .nav-tabs > li > a,
 .with-nav-tabs.panel-primary .nav-tabs > li > a:hover,
@@ -319,17 +322,17 @@ a.link-normal:hover{
 .with-nav-tabs.panel-primary .nav-tabs > .open > a:focus,
 .with-nav-tabs.panel-primary .nav-tabs > li > a:hover,
 .with-nav-tabs.panel-primary .nav-tabs > li > a:focus {
-	color: #fff;
-	background-color: #3071a9;
-	border-color: transparent;
+    color: #fff;
+    background-color: #3071a9;
+    border-color: transparent;
 }
 .with-nav-tabs.panel-primary .nav-tabs > li.active > a,
 .with-nav-tabs.panel-primary .nav-tabs > li.active > a:hover,
 .with-nav-tabs.panel-primary .nav-tabs > li.active > a:focus {
-	color: #428bca;
-	background-color: #fff;
-	border-color: #428bca;
-	border-bottom-color: transparent;
+    color: #428bca;
+    background-color: #fff;
+    border-color: #428bca;
+    border-bottom-color: transparent;
 }
 .with-nav-tabs.panel-primary .nav-tabs > li.dropdown .dropdown-menu {
     background-color: #428bca;
