--- a/assets/css/stylePrincipal.css
+++ b/assets/css/stylePrincipal.css
@@ -119,7 +119,7 @@ section {
     padding-right:100px;
 }
 
-nav {
+nav.navbar {
     position: absolute;
     width: 100%;
     background: #207be5;
@@ -974,4 +974,28 @@ table{
     min-width: 100% !important;
     width: 100% !important;
     max-width: 100% !important;
+}
+.nav li.dropdown{
+    padding-left: 15px;
+    padding-right: 15px;
+}
+.nav li.dropdown .dropdown{
+    padding-top: 35px;    
+    padding-bottom: 29px;
+}
+.nav li:hover{
+    background: blue;
+}
+.nav li:hover .dropdown{
+    background: blue;
+}
+.breadcrumb-item+.breadcrumb-item::before {
+    display: inline-block;
+    padding-right: .5rem;
+    padding-left: .5rem;
+    color: #636c72;
+    content: "/";
+}
+.breadcrumb{
+    box-shadow: 0px 0px 2px #555;    
 }
